hw5_lab8/tests/errors/syn_bad_var_decl.kt
fun main() {
    var = 5
}
